// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SymBotAuth kmAuthenticate when the auth type is not rsa POSTs to /keyauth/v1/authenticate with the correct parameters 1`] = `
Array [
  Array [
    Object {
      "agent": "agent",
      "headers": Object {},
      "hostname": "https://key.example.com",
      "method": "POST",
      "passphrase": "Passphrase",
      "path": "/keyauth/v1/authenticate",
      "pfx": "Contents of /I am the cert",
      "port": 5678,
    },
    [Function],
  ],
]
`;

exports[`SymBotAuth sessionAuthenticate when the auth type is not rsa POSTs to /sessionauth/v1/authenticate with the correct parameters 1`] = `
Array [
  Array [
    Object {
      "agent": "agent",
      "headers": Object {},
      "hostname": "https://session.example.com",
      "method": "POST",
      "passphrase": "Passphrase",
      "path": "/sessionauth/v1/authenticate",
      "pfx": "Contents of /I am the cert",
      "port": 1234,
    },
    [Function],
  ],
]
`;
